--- a/week_3/day4/cssgrid.html
+++ b/week_3/day4/cssgrid.html
@@ -12,9 +12,9 @@
         <nav>Navbar</nav>
         <main>Main</main>
         <div id="sidebar">Sidebar</div>
-        <div id="sidebar">Content1</div>
-        <div id="sidebar">Content2</div>
-        <div id="sidebar">Content3</div>
+        <div id="content-div-1">Content1</div>
+        <div id="content-div-2">Content2</div>
+        <div id="content-div-3">Content3</div>
         <footer>Footer</footer>
 
     </div>
