--- a/week_5/day1/examples/task1.html
+++ b/week_5/day1/examples/task1.html
@@ -9,8 +9,11 @@
 </head>
 <body>
     
-    <h1>The Weather App</h1>
+    <h1>The Weather Channel</h1>
+    <input type="text" name="zip" placeholder="Enter 5 digit ZIP Code" class="zip">
+     <button class ="btn">Weather</button>
     <div id="app">App</div>
+
 </body>
     <script src="task1.js">JS</script>
 </html>
