--- a/week_5/day3/examples/faker.html
+++ b/week_5/day3/examples/faker.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="faker.css">
+    <style>
+        div {
+          background-image: url('https://images.app.goo.gl/XVvdRg5TYZLCBDFQA');
+        }
+    </style>
 </head>
-<body>
+<body id = "root">   
     <h1>Faker API</h1>
+        <div class = "main-container">
+            <button class="notperson" id="people">Get people</button>
+            <button class="totally-images" id="images">Get images</button>   
+         </div>
+ 
+  
 </body>
     <script src="faker.js"></script>
 </html>
